/***********************************************************************
 X3 ChangeLog

2006-12-18  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: fixing a bug with unmatching userlevels and the del*
	commands. (such as delpeon of a user with non-standard peon level)

	* src/spamserv.c: fixing memory corruption problems with dicts

2006-12-20  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.help: Opps that will teach me for cut n pasting.
	Adjusted duration line for CLVL help. Users are not removed after
	the duration they are reverted back to their previous access
	level.

2006-12-19  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: check the ircd side ban list too

	* src/opserv.c: Fixed a small bug, woops.

2006-12-19  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: Added trace_check_bans, cut down version of
	check_bans for checkrestrictions

	* src/chanserv.h: Declare trace_check_bans.

	* src/opserv.c: Added addalert/trace option checkrestrictions. When
	using SVSJOIN as an action this option will check the ban lists, invite
	keys and limits of the target channel and if any match or exist (invite
	etc) then the SVSJOIN wont go through

	* src/opserv.help: Added information about checkrestrictions.

2006-12-19  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: Timed CLVL's. This just works like my last commit.

	* src/chanserv.h: tweaked expiry to accessexpiry and added clvlexpiry
	and lastlevel.

	* src/chanserv.help: Added information about timed clvls.

2006-12-18  Alex Schumann   <rubin@afternet.org>

	* src/mod-memoserv.c: add a 'privmsg' flag for being notified via pm
	instead of notice, when you get new memos. Fixed a buffer overrun with
	memo ids. 

	* src/mod-memoserv.help: fix-up help for settings.

2006-12-19  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: New feature, channel managers can now add people
	with a duration. After the duration expires the person will be