@@ -1,12 +1,16 @@
 /***********************************************************************
  X3 ChangeLog
 
-2006-12-18  Alex Schumann   <rubin@afternet.org>
+2006-12-20  Alex Schumann   <rubin@afternet.org>
 
 	* src/chanserv.c: fixing a bug with unmatching userlevels and the del*
 	commands. (such as delpeon of a user with non-standard peon level)
 
-	* src/spamserv.c: fixing memory corruption problems with dicts
+	* src/spamserv.c: fixing memory corruption problems with dicts. Fixed
+	crash with service rename, and probably many other problems.
+
+	* src/mod-track.c: fixing memory problems, and the broken set command.
+	Track may be stable now, needs large scale testing.
 
 2006-12-20  Neil Spierling  <sirvulcan@gmail.com>
 
